# aruba-central-mcp

./: .gitignore  CLAUDE.md  README.ja.md  README.md  pyproject.toml  server.json
.github/workflows/: pypi.yaml  release.yml  test.yml
aruba_central_mcp/: __init__.py  __main__.py  client.py  server.py
tests/: test_client.py  test_server.py
