[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aruba-central-mcp"
dynamic = ["version"]
description = "MCP server for Aruba Central: expose AP, switch, and client status to AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "AIKAWA Shigechika"},
]
keywords = ["aruba", "aruba-central", "mcp", "model-context-protocol", "network", "wireless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
aruba-central-mcp = "aruba_central_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/shigechika/aruba-central-mcp"
Repository = "https://github.com/shigechika/aruba-central-mcp"
Issues = "https://github.com/shigechika/aruba-central-mcp/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "respx"]

[tool.setuptools]
packages = ["aruba_central_mcp"]

[tool.setuptools.dynamic]
version = {attr = "aruba_central_mcp.__version__"}
